# gatekeeper

./: .env.example  .gitignore  Cargo.toml  LICENSE  MELAMPUS_PARITY_PLAN.md  README.md  build.rs  config.toml
.github/workflows/: ci.yml
src/: app_state.rs  cli.rs  main.rs
src/admin/: api.rs  mod.rs
src/admin/ui/: index.html
src/auth/: jwt.rs  mod.rs  roles.rs  users.rs
src/config/: config.rs  mod.rs  reload.rs  validate.rs
src/context/: request.rs
src/grpc/: client.rs  mod.rs  server.rs
src/grpc/proto/: policy.proto
src/log/: audit.rs  inspect.rs  worker.rs
src/metrics/: middleware.rs  mod.rs
src/policy/: decision.rs  engine.rs  matcher.rs  replay.rs  rules.rs
src/proxy/: forward.rs  mod.rs  server.rs
src/security/: rate_limit.rs
src/threat/: feeds.rs  mod.rs
src/wasm/: host.rs  mod.rs  runtime.rs
