[package]
name = "gatekeeper"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
hyper = "1"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1"
clap = { version = "4", features = ["derive"] }

# Metrics
opentelemetry = { version = "0.21", features = ["metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["metrics"] }
opentelemetry-prometheus = "0.14"
prometheus = "0.13"

# Admin UI
axum-extra = { version = "0.9", features = ["typed-header"] }
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"

# Hot reload
notify = "6"
arc-swap = "1"

# WASM rules
wasmtime = "16"

# gRPC
tonic = "0.11"
prost = "0.12"

# RBAC / Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Threat intel
reqwest = { version = "0.11", features = ["json"] }

# Env
dotenvy = "0.15"

# Error handling
anyhow = "1"

[build-dependencies]
tonic-build = "0.11"
